fix: add missing color in css vars

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 :root {
     /* Colors */
     --black: #0E0E0E;
+    --grey: #606060;
     --white: #FEFEFE;
 
     --brown: #C7C2B3;
